Fix <select> background on Firefox

--- a/css/datepicker.css
+++ b/css/datepicker.css
@@ -66,6 +66,7 @@
   display: flex;
 }
 .sdp-nav-dropdowns select {
+  background: white;
   border: 1px solid transparent;
   font-size: 1.1em;
   font-weight: 500;
